src/main/java/com/example/tms/error/NoSuchTaskException.java
package com.example.tms.error;

public class NoSuchTaskException extends RuntimeException {
    public NoSuchTaskException(String message) {super(message);}
}
